2007-05-01  Piotr Fusik  <fox@scene.pl>
* asapscan.c, chksap.pl: detect POKEY features used, such as hi-pass filters

* gsplayer/gspasap.c: pass AUTHOR and NAME to GSPlayer

* win32/settings.c, win32/Makefile, gsplayer/gspasap.c, win32/winamp/in_asap.c:
  identical settings dialog box in Winamp and GSPlayer plugins

* xmms/libasap.c: implemented about, get_song_info and file_info_box


2007-04-30  Piotr Fusik  <fox@scene.pl>
* gsplayer/gspasap.c, gsplayer/gspasap.def, win32/Makefile: made the GSPlayer
  plugin work

* asap2wav.c: refactoring; "--raw" skips WAV headers, "-o -" writes
  to standard output. You can use ASAP2WAV with these two options to generate
  an audio stream for another program, for example:
  asap2wav --raw -o - file.sap | aplay -r 44100 -f S16_LE -t raw

* chksap.pl: a Perl script that can detect and automatically fix many subtle
  errors in SAP files as well as compute statistics


2007-04-29  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, win32/winamp/in_asap.c, win32/foobar2000/foo_asap.cpp,
  xmms/libasap.c, TODO: ASAP_Seek()

* win32/foobar2000/foo_asap.cpp, win32/foobar2000/README: number of subsongs
  is available as the "subsongs" info item

* asapscan.c: fixed loop detection


2007-04-28  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: create single package for the Win32 platform containing
  ASAP2WAV, WASAP, Winamp plugin and foobar2000 plugin

* win32/wasap/README, win32/winamp/README, win32/foobar2000/README: updated


2007-04-27  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap2wav.c, win32/Makefile, win32/settings.rc,
  win32/settings.h, win32/wasap/wasap.c, win32/wasap/wasap.rc,
  win32/wasap/resource.h, win32/winamp/in_asap.c,
  win32/foobar2000/foo_asap.cpp, gsplayer/gspasap.c, xmms/libasap.c, TODO:
  recognize AUTHOR, NAME, DATE, TIME tags in SAP files;
  major refactoring of the API

* asap2wav.c: removed the "no input files" message

* asapscan.c, asap.c, win32/Makefile: asapscan is a command-line utility